--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -2,7 +2,7 @@ name: Python Jobs Scraping Scheduled Script
 
 on:
   schedule:
-  - cron: "0 13 * * 1-5"
+  - cron: "0 6-18/6 * * 1-5"
 
   workflow_dispatch:
   
