--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,12 @@ list_test.py
 test_jobs.py
 jobs_checklist_debug.dat
 iv_entries_debug.dat
+checklist_en_debug.dat
+.gitignore
+.gitignore
+news_en_debug.xml
+.gitignore
+checklist_it_debug.dat
+news_it_debug.xml
+news_jobs_debug.xml
+checklist_jobs_debug.dat
