--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -3,6 +3,7 @@ name: Python Jobs Scraping Scheduled Script
 on:
   schedule:
   - cron: "0 6-18/4 * * 1-5"
+  - cron: "0 */6 * * 0,6"
 
   workflow_dispatch:
   
