--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Execute Python Script
         env:
           BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
-          CHAT_ID: ${{ secrets.CHAT_ID }}
+          CHAT_ID_JOBS: ${{ secrets.CHAT_ID_JOBS }}
         run: python jobs.py
       - name: Commit Files
         run: |
