--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -22,6 +22,8 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
+      - name: Install wkhtmltopdf
+        run: sudo apt install -y wkhtmltopdf
       - name: Install Python Dependencies
         uses: py-actions/py-dependency-install@v4
         with:
