--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -23,7 +23,9 @@ jobs:
         with:
           python-version: "3.10"
       - name: Install wkhtmltopdf
-        run: sudo apt install -y wkhtmltopdf
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y wkhtmltopdf
       - name: Install Python Dependencies
         uses: py-actions/py-dependency-install@v4
         with:
