--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-beautifulsoup4==4.11.1
+beautifulsoup4==4.12.3
 imgkit==1.2.3
-lxml==4.9.1
-requests==2.32.2
-telegraph==2.1.0
+lxml==5.3.0
+Requests==2.32.3
+telegraph==2.2.0
