--- a/.github/workflows/scholarships.yml
+++ b/.github/workflows/scholarships.yml
@@ -29,4 +29,4 @@ jobs:
         env:
           BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
           CHAT_ID: ${{ secrets.CHAT_ID }}
-        run: python scholarships_daemon.py
+        run: python scholarships.py
